based notebook for financial analysis

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -60,7 +60,7 @@ RUN pip install --no-cache --upgrade \
             PyWavelets \ 
             keras-tcn \
 	          matplotlib \
-            statsmodels \
+            statsmodels 
 
 RUN pip install --upgrade pip
 
